<resources>
    <string name="app_name">蝈蝈学苑</string>
    <string name="hello_world">蝈蝈学苑</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">名字</string>
    <string name="title_activity_on_line">OnLineActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ji_gou_xiang_qing">JiGouXiangQingActivity</string>
    <string name="title_activity_teacher_jie_shao">TeacherJieShaoActivity</string>
    <string name="title_activity_zhao_sheng_xiang_qing">ZhaoShengXiangQingActivity</string>
    <string name="parent">家长</string>
    <string name="teacher">教师</string>
    <string name="train">培训</string>
    <string name="child">幼儿</string>
    <string name="student">学生</string>
    <string name="train_dece">机构简介</string>
    <string name="back">返回</string>
    <string name="on_line_jin_pin">线上精品</string>
    <string name="un_line_jin_pin">线下精品</string>
    <string name="activity_area">活动专区</string>
    <string name="see_more">查看更多</string>
    <string name="auditions_jin_pin">试听课</string>
    <string name="small_class">微课堂</string>
    <string name="notice">公告</string>
    <string name="my_small_class">我的微课</string>
    <string name="my_consultation">我的咨询</string>
    <string name="my_answer">我的问答</string>
    <string name="train_collection">培训收藏</string>
    <string name="teaching_children">教子有方</string>
    <string name="heart_linked">心连心微课堂</string>
    <string name="recommend_mechanism">推荐机构</string>
    <string name="jin_xuan_mechanism">精选机构</string>
    <string name="more">更多</string>
    <string name="another_batch">换一批</string>
    <string name="search">搜索</string>
    <string name="apply_for_training_teacher">申请成为平台老师</string>
    <string name="commodity">商品</string>
    <string name="education_headline">教育头条</string>
    <string name="on_line_expert">在线专家</string>
    <string name="expert_consultation">咨询老师</string>
    <string name="current_version">当前版本：1.1</string>
    <string name="trainer_collection">培训师收藏</string>
    <string name="consultant_collectionn">咨询师收藏</string>
    <string name="edu_headline">教育头条</string>
    <string name="comment">评论</string>
    <string name="speek">我来说两句</string>
    <string name="edu_header">教育头条</string>
    <string name="everyday">每天上课时间</string>
    <string name="everyweek">每周上课时间</string>
    <string name="add_adress">添加收货地址</string>
    <string name="used_email">（用于邮寄课程配套教材）</string>
    <string name="curriculum_price">课程价格</string>
    <string name="bug_vip">购买vip获取更多权益，查看权益</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="Rights_and_interests">会员权益</string>
    <string name="alipay">支付宝支付</string>
    <string name="weChat">微信支付</string>
    <string name="balance">余额支付</string>
    <string name="noAlipay">检测到此设备不支持支付宝支付</string>
    <string name="noWeiXin">检测到此设备不支持微信支付</string>
    <string name="vipcourse">vip课程价格</string>
    <string name="myCourse">我的课程</string>
    <string name="myArea">我的活动</string>
    <string name="myCollection">我的收藏</string>
    <string name="activityDece">活动详情</string>
    <string name="sendPeople">发起人</string>
    <string name="participate">参与人</string>
    <string name="no_ding">不支持退订</string>
    <string name="lianxi">联系平台</string>
    <string name="yuYueCourse">预约课程</string>
    <string name="immediatelybuy">立即购买</string>
    <string name="addcomment">添加评论</string>
    <string name="helpteacher">培训老师</string>
    <string name="consultantNum">咨询次数</string>
    <string name="praiseRate">好评率</string>
    <string name="percentage">\u0025</string>
    <string name="onLineTeacher">连线老师</string>
    <string name="fans">粉丝</string>
    <string name="phone">电话</string>
    <string name="lian_xi_fang_shi">联系方式</string>
    <string name="jiao_xue_ke_mu">教学科目</string>
    <string name="jiao_xue_nian_ji">教学年级</string>
    <string name="zheng_shu">证书</string>
    <string name="getCard">手持身份证证明</string>
    <string name="liezi">示例</string>
    <string name="introduceMe">自我介绍</string>
    <string name="submission">提交</string>
    <string name="shi_lie">示例</string>
    <string name="becomeZiXun">申请成为平台咨询师</string>
    <string name="myCurriculum">我的课程</string>
    <string name="appointment_on_line">在线预约</string>
    <string name="finance">课程财务</string>
    <string name="on_line_answer">在线问答</string>
    <string name="on_line_zi_xun">咨询在线</string>
    <string name="answer_on_line">问答在线</string>
    <string name="yu_yue_ding_dan">预约订单</string>
    <string name="yu_yue_xin_xi">预约信息</string>
    <string name="zi_xun_zhu_ti">咨询主题</string>
    <string name="zhi_xun_fang_shi">咨询方式</string>
    <string name="zi_xun_shi_chang">咨询时长</string>
    <string name="buy_num">购买次数</string>
    <string name="he_ji_price">合计费用</string>
    <string name="my_data">我的信息</string>
    <string name="age">年龄</string>
    <string name="question_dece">问题描述</string>
    <string name="zi_xun_dan_jia">咨询单价</string>
    <string name="write_pin_yu">写评语</string>
    <string name="zhuan_ru_yu_e">转入余额提现</string>
    <string name="z_r_y_e">转入余额</string>
    <string name="name_et">姓名：</string>
    <string name="phone_et">电话：</string>
    <string name="nian_ji">年级</string>
    <string name="check_updata_apk">最新的安装包已经就绪， 恭请主人体验尝新</string>
    <string name="cancal">取消</string>
    <string name="updata">立即更新</string>
    <string name="ok">确定</string>
    <string name="bankPhone">银行卡预留手机号</string>
    <string name="shengqingruzhu">请填写申请入驻的联系方式</string>
    <string name="chikaren">持卡人</string>
    <string name="chikarenxingming">持卡人姓名</string>
    <string name="kaihuhang">开户行</string>
    <string name="carnum">卡号    </string>
    <string name="shurubankcard">请输入银行卡卡号</string>
    <string name="shenfengzheng">身份证</string>
    <string name="querenbangding">确认绑定</string>
    <string name="phonenum">手机号</string>
    <string name="shurushenfencard">请输入身份证卡号</string>
    <string name="ageed">年龄：</string>
    <string name="nameed">姓名：</string>
    <string name="calssed">年级：</string>
    <string name="phoneed">电话：</string>
    <string name="lijiyuyue">立即预约</string>
    <string name="schoolname">机构名</string>
</resources>