<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@mipmap/gxin" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:text="@string/check_updata_apk"
            android:textColor="@color/gwe"
            android:textSize="13sp" />


        <LinearLayout
            android:id="@+id/cancel_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/cancal"
                android:textColor="@color/light_gray"
                android:visibility="gone" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/updata"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/cuo" />
    </RelativeLayout>


</RelativeLayout>
